# tiny_orders

./: Cargo.toml
src/: main.rs  prepare.rs  rand.rs  run.rs
src/entity/: commodity.rs  consumer.rs  evaluation.rs  inventory.rs  mod.rs  order.rs
