[package]
name = "tiny_orders"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.65"
chrono = "0.4.22"
clap = { version = "3.2.22", features = ["derive"] }
ctrlc = "3.2.3"
fakeit = "1.1.1"
flume = "0.10.14"
futures = "0.3.24"
rand = "0.8.5"
sea-orm = { version = "0.9.2", features = ["sqlx-sqlite", "sqlx-postgres", "sqlx-mysql", "runtime-tokio", "runtime-tokio-rustls"] }
tokio = { version = "1.21.1", features = ["macros"] }
